--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
